--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/axion
+      url: https://pypi.org/p/axionflow
     permissions:
       id-token: write  # IMPORTANT: Mandatory for trusted publishing
       contents: read
